--- a/recipes/taco.html
+++ b/recipes/taco.html
@@ -3,11 +3,10 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Odin Recipes</title>
+        <title>Taco Recipe</title>
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
-        <a href="./recipes/taco.html">Tacos</a>
+        <h1>Tacos</h1>
     </body>
 </html>
