Add content to taco recipe page
Added a picture of the recipe, description under the recipe, list of
ingredients, as well as instructions to making dish to page.

--- a/recipes/taco.html
+++ b/recipes/taco.html
@@ -8,5 +8,21 @@
 
     <body>
         <h1>Tacos</h1>
+        <img src="../img/taco.jpg" alt="Taco" height="100" width="100">
+        <h2>Fresh beef tacos topped with lettuce tomatoes and cheese.</h2>
+        <ul>
+            <li>Ground Beef</li>
+            <li>Beef seasoning</li>
+            <li>Taco Shells</li>
+            <li>Salsa</li>
+            <li>Cheese</li>
+            <li>Tomatoes</li>
+        </ul>
+        <ol>
+            <li>Cook ground beef in skillet.</li>
+            <li>Once beef is browned at beef seasoning.</li>
+            <li>Place beef into taco shells.</li>
+            <li>Add toppings of choice and enjoy.</li>
+        </ol>
     </body>
 </html>
